[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Assets/xWing2.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/reactorParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/blue_particle.png" type="Texture" id=4]
[ext_resource path="res://Sounds/player_Explode.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/player_Hit.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/player_Shot.wav" type="AudioStream" id=7]
[ext_resource path="res://Prefabs/shield.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=2]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("xWing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("reactorParticles:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("reactorParticles2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("xWing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("reactorParticles:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("reactorParticles2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.91638, 17 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("xWing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("reactorParticles2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.91638, 17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("reactorParticles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 17 ) ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("xWing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("reactorParticles2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.91638, 17 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("reactorParticles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 17 ) ]
}

[node name="player2" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
set_Player_2 = true

[node name="xWing" type="Sprite" parent="." index="0"]

scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 12
_sections_unfolded = [ "Animation", "Transform" ]

[node name="shootFrom" type="Position2D" parent="." index="1"]

position = Vector2( 0, -17.4036 )
scale = Vector2( 1, 0.752936 )

[node name="shootFromLeft" type="Position2D" parent="." index="2"]

position = Vector2( 14, -17.4036 )
scale = Vector2( 1, 0.752936 )

[node name="shootFromRight" type="Position2D" parent="." index="3"]

position = Vector2( -14, -17.4036 )
scale = Vector2( 1, 0.752936 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="4"]

position = Vector2( 0.124329, 2.19885 )
scale = Vector2( 1.09504, 0.991978 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/explode = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/left = SubResource( 4 )
anims/right = SubResource( 5 )
blend_times = [  ]
autoplay = ""

[node name="touchedReset" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="reactorParticles" parent="." index="7" instance=ExtResource( 3 )]

position = Vector2( -6, 17 )
amount = 5
texture = ExtResource( 4 )

[node name="reactorParticles2" parent="." index="8" instance=ExtResource( 3 )]

position = Vector2( 5.91638, 17 )
amount = 5
texture = ExtResource( 4 )

[node name="ShootingDelay" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="sound_Explode" type="AudioStreamPlayer2D" parent="." index="10"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Sounds"
area_mask = 1

[node name="sound_Hit" type="AudioStreamPlayer2D" parent="." index="11"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Sounds"
area_mask = 1

[node name="sound_Shooting" type="AudioStreamPlayer2D" parent="." index="12"]

stream = ExtResource( 7 )
volume_db = -10.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Sounds"
area_mask = 1
_sections_unfolded = [ "Z" ]

[node name="shield" parent="." index="13" instance=ExtResource( 8 )]

[connection signal="area_entered" from="." to="." method="_on_player_area_enter"]

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]

[connection signal="timeout" from="touchedReset" to="." method="_on_touchedReset_timeout"]

[connection signal="timeout" from="ShootingDelay" to="." method="_on_ShootingDelay_timeout"]


